<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:divider="@drawable/divider_grey"
  android:showDividers="middle">

  <include layout="@layout/layout_title" />

  <LinearLayout
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      style="@style/txt_loadLeftStyle"
      android:text="@string/load_card_no" />

    <TextView
      android:id="@+id/tv_card_no"
      style="@style/txt_loadRightStyle"
      tools:text="0021111111" />
  </LinearLayout>

  <LinearLayout
    android:id="@+id/ll_ballance"
    android:layout_width="match_parent"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      style="@style/txt_loadLeftStyle"
      android:text="@string/load_balance" />

    <TextView
      android:id="@+id/tv_balance"
      style="@style/txt_loadRightStyle"
      tools:text="0元"
      android:textColor="@color/red" />
  </LinearLayout>


  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:text="@string/load_tips_load_success"
    android:textColor="@color/red" />


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/load_friendly_tips" />


    <TextView
      android:id="@+id/tv_tips"
      android:layout_marginTop="5dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:lineSpacingExtra="3dp"
      android:text="@string/load_tips_load" />

  </LinearLayout>


</LinearLayout>


