<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white"
  android:orientation="vertical"
  tools:context=".app.MainActivity">

  <ImageView
    android:layout_width="wrap_content"
    android:layout_height="250dp"
    android:scaleType="fitXY"
    android:src="@drawable/bg_main_gas_card"
    android:id="@+id/imageView" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="-40dp"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal">

    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginLeft="30dp"
      android:orientation="horizontal">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_card_no"
        android:textColor="#1AA2F3" />

      <TextView
        android:id="@+id/tv_card_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textColor="#1AA2F3"
        tools:text="0021111111" />
    </LinearLayout>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginRight="30dp"
      android:orientation="horizontal">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_balance"
        android:textColor="#1AA2F3" />

      <TextView
        android:id="@+id/tv_card_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textColor="#1AA2F3"
        tools:text="100元" />
    </LinearLayout>
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
      android:id="@+id/ll_to_load"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:background="@drawable/bg_click"
      android:gravity="center"
      android:orientation="vertical">
      <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_load" />
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="16dp"
        android:text="@string/main_to_load"
        android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
      android:id="@+id/ll_to_trx_records"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:background="@drawable/bg_click"
      android:gravity="center"
      android:orientation="vertical">
      <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_transaction_records" />
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="16dp"
        android:text="@string/main_to_transaction_records"
        android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
      android:id="@+id/ll_to_settings"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:background="@drawable/bg_click"
      android:gravity="center"
      android:orientation="vertical">
      <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_settings" />
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="16dp"
        android:text="@string/main_to_settings"
        android:textSize="18sp" />
    </LinearLayout>

  </LinearLayout>

</LinearLayout>
